# disk-analyzer

./: .gitignore  Makefile  README.md  package-lock.json
.github/workflows/: build.yml
api/: Cargo.toml
api/.cargo/: config.toml
api/src/: biggest.rs  dir_info.rs  main.rs  server.rs
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  AxiosProvider.tsx  DirContents.tsx  Home.tsx  LargestFiles.tsx  Path.tsx  RepartitionPlot.tsx  index.css  utils.ts
