[package]
name = "disk-analyzer"
version = "0.1.0"
authors = ["nathsou <nathsoufflet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-std = "1.9.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.6"
bincode = "1.3.3"
dirs = "3.0.2"
